--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,11 +12,11 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "C:/Users/aryan/Desktop/ECE 362/lab-6-spi-aryansri0208/.pio/build/nucleo_f091rc/firmware.elf",
+            "executable": "C:/Users/rosha/OneDrive/ECE362/ECE362_Project_BallBreaker/.pio/build/nucleo_f091rc/firmware.elf",
             "projectEnvName": "nucleo_f091rc",
-            "toolchainBinDir": "C:/Users/aryan/.platformio/packages/toolchain-gccarmnoneeabi/bin",
+            "toolchainBinDir": "C:/Users/rosha/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
-            "svdPath": "C:/Users/aryan/.platformio/platforms/ststm32/misc/svd/STM32F091x.svd",
+            "svdPath": "C:/Users/rosha/.platformio/platforms/ststm32/misc/svd/STM32F091x.svd",
             "preLaunchTask": {
                 "type": "PlatformIO",
                 "task": "Pre-Debug"
@@ -26,21 +26,21 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "C:/Users/aryan/Desktop/ECE 362/lab-6-spi-aryansri0208/.pio/build/nucleo_f091rc/firmware.elf",
+            "executable": "C:/Users/rosha/OneDrive/ECE362/ECE362_Project_BallBreaker/.pio/build/nucleo_f091rc/firmware.elf",
             "projectEnvName": "nucleo_f091rc",
-            "toolchainBinDir": "C:/Users/aryan/.platformio/packages/toolchain-gccarmnoneeabi/bin",
+            "toolchainBinDir": "C:/Users/rosha/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
-            "svdPath": "C:/Users/aryan/.platformio/platforms/ststm32/misc/svd/STM32F091x.svd"
+            "svdPath": "C:/Users/rosha/.platformio/platforms/ststm32/misc/svd/STM32F091x.svd"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "C:/Users/aryan/Desktop/ECE 362/lab-6-spi-aryansri0208/.pio/build/nucleo_f091rc/firmware.elf",
+            "executable": "C:/Users/rosha/OneDrive/ECE362/ECE362_Project_BallBreaker/.pio/build/nucleo_f091rc/firmware.elf",
             "projectEnvName": "nucleo_f091rc",
-            "toolchainBinDir": "C:/Users/aryan/.platformio/packages/toolchain-gccarmnoneeabi/bin",
+            "toolchainBinDir": "C:/Users/rosha/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
-            "svdPath": "C:/Users/aryan/.platformio/platforms/ststm32/misc/svd/STM32F091x.svd",
+            "svdPath": "C:/Users/rosha/.platformio/platforms/ststm32/misc/svd/STM32F091x.svd",
             "loadMode": "manual"
         }
     ]
