--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "display_game_function.h": "c",
-        "gesture.h": "c"
+        "gesture.h": "c",
+        "stdlib.h": "c",
+        "stm32f10x.h": "c",
+        "stm32f0xx.h": "c"
     }
 }
